# FedPortal2.0

./: .dockerignore  Dockerfile  alembic.ini  docker-compose.yml  pyproject.toml  requirements.txt
examples/: payload_examples.json
migrations/: env.py
migrations/versions/: 001_initial.py  002_jsonb_and_indexes.py  003_sync_log_source.py  004_add_municipality_department_kids.py  005_add_activity_order.py
src/: dependency_injection.py  main.py
src/clients/: fed_portal.py
src/config/: logging.py  main.py
src/consumers/: __init__.py  consumer.py  consumer_dlq_retry.py  dlq.py  handler.py
src/mappings/: activity.py  activity_order.py  certificate.py  department.py  event.py  kids.py  order.py  organization.py  program_group_financing_source.py
src/models/: __init__.py  base.py  definition.py  enum.py  sync_log.py  synced_record.py
src/repositories/: __init__.py  sync_record.py
src/routers/: sync.py
src/schemas/: base.py  payloads.py
src/services/: catalog.py  factory.py  formatters.py  orchestrator.py  sync_services.py
tests/: conftest.py
tests/unit/activity/: __init__.py  test_formatters.py  test_payloads.py
tests/unit/activity_order/: test_formatters.py  test_payloads.py
tests/unit/certificate/: __init__.py  test_formatters.py  test_payloads.py
tests/unit/department/: __init__.py  test_formatters.py  test_payloads.py
tests/unit/event/: __init__.py  test_formatters.py  test_payloads.py
tests/unit/infrastructure/: __init__.py  test_base_formatter.py  test_dlq.py  test_fed_portal_client.py  test_message_handler.py  test_orchestrator.py  (+2 more)
(+21 files in other folders)
