[project]
name = "sync-service"
version = "0.1.0"
description = "Сервис для отправки данных на федеральный портал"
requires-python = ">=3.12"
dependencies = [
    "aio-pika>=9.6.2",
    "alembic>=1.18.4",
    "asyncpg>=0.31.0",
    "fastapi>=0.135.3",
    "httpx>=0.28.1",
    "psycopg2-binary>=2.9.11",
    "pydantic-settings>=2.13.1",
    "sqlalchemy>=2.0.49",
    "structlog>=25.1.0",
    "uvicorn>=0.44.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "ruff>=0.15.9",
]

[tool.ruff]
target-version = "py312"
line-length = 120
show-fixes = true

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "B",    # flake8-bugbear
    "I",    # isort
    "ICN",  # flake8-import-conventions
    "PGH",  # pygrep-hooks
    "PIE",  # flake8-pie
    "PT",   # flake8-pytest-style
    "RET",  # flake8-return
    "T20",  # flake8-print
    "UP",   # pyupgrade
    "YTT",  # flake8-2020
]

ignore-init-module-imports = true
ignore = ["B008"]

[tool.ruff.lint.isort]
known-first-party = ["src"]
combine-as-imports = true
lines-after-imports = 2

[tool.ruff.format]
quote-style = "single"
